fix // time display and fixed spacing with reg controls

--- a/sass/px-vis-register.scss
+++ b/sass/px-vis-register.scss
@@ -78,7 +78,11 @@ $tooltip-text-color-light: var(--px-tooltip-light-text-color, #000);
 #regControls {
   display: flex;
   justify-content: flex-end;
-  height: calculateRem(16px);
+  height: calculateRem(18px);
+}
+
+#regControls.scrollOn {
+  height: calculateRem(28px);
 }
 
 #dateTime{
